Resolved issue with the scrollbar showing on desktop view for tab navigation. Finished button setup for scrolling.

--- a/src/app/profile/profile-content/profile-content.component.css
+++ b/src/app/profile/profile-content/profile-content.component.css
@@ -45,9 +45,11 @@
   }
 }
 
+.scroll-btn:hover, .scroll-btn:active, .scroll-btn:focus {
+  color: var(--color-secondary);
+}
+
 .tab-container {
-  height: 50px;
-  overflow: hidden;
   text-align: center;
 }
 
@@ -57,6 +59,11 @@
   scroll-behavior: smooth;
 }
 
+#profileTabs::-webkit-scrollbar {
+  display: none;
+}
+
 .tab {
   width: 100px;
+  overflow: hidden;
 }
